# school-ago-dic-2023

./: .gitignore
AleFelix/: archivo_texto_4_2.txt  lex.yy.c
bd/: Clase1.md  Clase2.md  Repaso.typ  Segundo.typ  main.md  main.typ
bd/eparcial2/: EP2.typ
bd/replicacion/: bib.yml  main.typ
bd/semaforo/: Cargo.toml
bd/semaforo/src/: main.rs
ciber/: Clase1.md  Clase1.typ  Ensayo.typ  Practica1.md  Practica2.typ  bib.bib  bib.yml  template.typ
fuerza2/: build.zig
investiga/: bd.typ  main.md
juegos/: Actividad22.typ  Clase1.md  Clase2.md  Clase2.typ  main.md
lang/: .Clase1.md.swp  CMakeLists.txt  Clase1.md  Clase1.typ  Repaso.md  justfile
lang/AleFelix/: Makefile  archivo_texto_4_1.txt  ejercicio4.lex
lang/AlejandroOsornio/: .gitignore  Makefile  a.out  build.py  lex.yy.c
lang/Clase/: a.out  build.py  lex.yy.c
lang/DanielOsornio/: Makefile
lang/DanielOsornio2/: entrada.txt  main.typ
lang/Equipo_8/: gramatica.txt
lang/Equipo_82/: .gitignore  Makefile
lang/collections/: Cargo.toml
lang/convert/: Makefile  main.cpp
lang/flex_rust/: Cargo.toml
lang/flex_test/: a.out  (+4 more)
lang/test/: CMakeLists.txt  justfile  main.cpp
lang/test/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
mate/: A.afdesign  Actividad23.md  Actividad25.typ  Actividad34.typ  main.md  main.typ  repaso.typ  semana2.md  tarea2.typ
mate/difuso/: Cargo.toml  main.md
mate/difuso/benches/: criterion.rs
mate/difuso/src/: lib.rs
net/: .gitignore  Clase1.md  main.md  main.typ
telematica/: Clase1.md
web/: bib.yml  investigacion.typ
(+211 files in other folders)
