[package]
name = "difuso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = { version = "0.3.2", optional = true }
fraction = "0.13.1"
itertools = "0.11.0"
nalgebra = "0.32.3"

[profile.rdbg]
inherits = "release"
debug = 1

[features]
dhat = ["dep:dhat"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false
